@@ -19,6 +19,8 @@ package org.apache.solr.common.params;
 
 import java.util.Locale;
 
+import org.apache.solr.common.SolrException;
+
 /**
  * @since solr 1.3
  */
@@ -29,9 +31,6 @@ public abstract class CoreAdminParams
 
   /** Should the STATUS request include index info **/
   public final static String INDEX_INFO = "indexInfo";
-
-  /** Persistent -- should it save the cores state? **/
-  public final static String PERSISTENT = "persistent";
   
   /** If you rename something, what is the new name **/
   public final static String NAME = "name";
@@ -79,15 +78,6 @@ public abstract class CoreAdminParams
   
   /** The shard id in solr cloud */
   public final static String SHARD = "shard";
-  
-  /** The shard range in solr cloud */
-  public final static String SHARD_RANGE = "shard.range";
-
-  /** The shard range in solr cloud */
-  public final static String SHARD_STATE = "shard.state";
-
-  /** The parent shard if applicable */
-  public final static String SHARD_PARENT = "shard.parent";
 
   /** The target core to which a split index should be written to
    * Multiple targetCores can be specified by multiple targetCore parameters */
@@ -120,12 +110,10 @@ public abstract class CoreAdminParams
   public static final String NODE = "node";
 
   public enum CoreAdminAction {
-    STATUS,  
-    LOAD,
+    STATUS,
     UNLOAD,
     RELOAD,
     CREATE,
-    PERSIST,
     SWAP,
     RENAME,
     MERGEINDEXES,
@@ -133,12 +121,9 @@ public abstract class CoreAdminParams
     PREPRECOVERY,
     REQUESTRECOVERY, 
     REQUESTSYNCSHARD,
-    CREATEALIAS,
     DELETEALIAS,
     REQUESTBUFFERUPDATES,
     REQUESTAPPLYUPDATES,
-    LOAD_ON_STARTUP,
-    TRANSIENT,
     OVERSEEROP,
     REQUESTSTATUS,
     REJOINLEADERELECTION,
@@ -146,13 +131,13 @@ public abstract class CoreAdminParams
     FORCEPREPAREFORLEADERSHIP,
     INVOKE;
 
-    public static CoreAdminAction get( String p )
-    {
-      if( p != null ) {
+    public static CoreAdminAction get( String p ) {
+      if (p != null) {
         try {
-          return CoreAdminAction.valueOf( p.toUpperCase(Locale.ROOT) );
+          return CoreAdminAction.valueOf(p.toUpperCase(Locale.ROOT));
+        } catch (IllegalArgumentException e) {
+          throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, "Wrong core admin action");
         }
-        catch( Exception ex ) {}
       }
       return null; 
     }
