@@ -210,8 +210,6 @@ Other Changes
 
 * SOLR-8443: Change /stream handler http param from "stream" to "expr" (Joel Bernstein, Dennis Gove)
 
-* SOLR-8476: Refactor and cleanup CoreAdminHandler (noble)
-
 ======================= 5.5.0 =======================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
@@ -246,6 +244,9 @@ Upgrading from Solr 5.4
 
 * All protected methods from CoreAdminHandler other than handleCustomAction() is removed by SOLR-8476 and can
   no more be overridden. If you still wish to override those methods, override the handleRequestBody()
+
+* The PERSIST CoreAdmin action which was a NOOP and returned a deprecated message has been removed. See SOLR-8476
+  for more details. The corresponding SolrJ action has also been removed.
 
 * bin/post now defaults application/json files to the /update/json/docs end-point.  Use `-format solr` to force
   files to the /update end-point.   See SOLR-7042 for more details.
@@ -472,6 +473,8 @@ Other Changes
 
 * SOLR-7042: bin/post now uses /update/json/docs for application/json content types, including support for
   .jsonl (JSON Lines) files.  (Erik Hatcher and shalin)
+
+* SOLR-8476: Refactor and cleanup CoreAdminHandler (noble, Varun Thacker)
 
 ==================  5.4.0 ==================
 
